--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,17 @@
   "compilerOptions": {
     "strictNullChecks": true,
     "jsx": "preserve",
-    "jsxImportSource": "solid-js"
-  }
+    "jsxImportSource": "solid-js",
+    "baseUrl": ".",
+		"verbatimModuleSyntax": true,
+    "paths": {
+			"@/components/*": ["src/components/*.astro"],
+			"@/layouts/*": ["src/layouts/*.astro"],
+			"@/utils": ["src/utils/index.ts"],
+			"@/data/*": ["src/data/*"],
+			"@/site-config": ["src/data/site.config.ts"],
+			"@/styles": ["src/styles/"]
+		}
+  },
+	"exclude": ["node_modules", "**/node_modules/*", ".vscode", "dist"]
 }
